Bug 363862 - 0.12.0 includes KDE4 headers
Summary: 0.12.0 includes KDE4 headers
Status: RESOLVED FIXED
Alias: None
Product: kmplayer
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Koos Vriezen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-02 21:05 UTC by Antonio Rojas
Modified: 2016-06-02 21:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2016-06-02 21:05:31 UTC
Version 0.12.0, which is supposed to be ported to KF5, still includes some headers from kdelibs:
kstdaction.h in kmplayerview.cpp and kviewarea.cpp
ksimpleconfig.h in kmplayerpartbase.cpp

These includes are not used and should be removed

Reproducible: Always

Steps to Reproduce:
1. Build kmplayer 0.12 without kdelibs installed

Actual Results:  
Build fails

Expected Results:  
Build succeeds
Comment 1 Koos Vriezen 2016-06-02 21:14:59 UTC
That is fast :)
Thanks for the report. So if you remove these includes, the build goes fine?
Comment 2 Antonio Rojas 2016-06-02 21:16:02 UTC
(In reply to Koos Vriezen from comment #1)
> That is fast :)
> Thanks for the report. So if you remove these includes, the build goes fine?

with lots of deprecation warnings, but yes.
Comment 3 Koos Vriezen 2016-06-02 21:22:53 UTC
The deprecated warnings are from the kde4support, mostly Kurl I think.
I'll push a fix. Thanks for confirming.
Comment 4 Koos Vriezen 2016-06-02 21:27:49 UTC
Git commit c071d48eb9dfaccf34bda322026adea2c8bc2406 by Koos Vriezen.
Committed on 02/06/2016 at 21:26.
Pushed by vriezen into branch '0.12'.

Remove kstdaction.h and ksimpleconfig.h kde4 headers

M  +0    -1    src/kmplayerpartbase.cpp
M  +0    -1    src/kmplayerview.cpp
M  +0    -1    src/viewarea.cpp

http://commits.kde.org/kmplayer/c071d48eb9dfaccf34bda322026adea2c8bc2406