Remove kstdaction.h and ksimpleconfig.h kde4 headers

BUG: 363862