src/kmplayerview.cpp
@@ -54,7 +54,6 @@
 #include <klocale.h>
 #include <kapplication.h>
 #include <kactioncollection.h>
-#include <kstdaction.h>
 #include <kshortcut.h>
 #include <kfinddialog.h>
 #include <kglobalsettings.h>
